# gppt

./: .gitignore  Cargo.toml  README.md
src/: end.html.partial  lib.rs  main-gen.rs  main.rs  prompt.txt  start.html.partial
